--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "argparse": "~0.1.15",
-    "aws-sdk": "~1.13.0"
+    "aws-sdk": "~1.13.0",
+    "coffee-script": "~1.6.3"
   }
 }
